fix font on mobile

--- a/_sass/media/575-sm.scss
+++ b/_sass/media/575-sm.scss
@@ -1,3 +1,5 @@
 @media (max-width: 575px) {
-
+    html {
+        font-size: 14px;
+    }
 }
